[package]
name = "PwM-Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
base64 = "0.21.2"
block-modes = "0.9.1"
cbc = "0.1.2"
hex = "0.4.3"
hex-literal = "0.4.1"
rust-argon2 = "1.0.0"

[lib]
crate-type = ["pwm_lib"]
bench = false
