[package]
name = "PwM-Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
base64 = "0.21.2"
cbc = "0.1.2"
hex = "0.4.3"
hex-literal = "0.4.1"
rand = "0.8.5"
rust-argon2 = "1.0.0"
rust-crypto = "0.2.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "7.3"
secstr = "0.5.1"
regex = "1.10.3"
termcolor = "1.4.1"
http = "1.1.0"
